# ADE-Scheduler

./: .editorconfig  .eslintrc.js  .flaskenv.default  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .redis-config-ttl.cfg  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUTURE.md  HOW TO - afficher calendrier.txt  HOW TO - babel.txt  HOW TO - serveur web.txt  HOW_TO-Redis.txt  ISSUES.md  LICENSE  LICENSE.md  README.md  SETUP.md  TODOLIST.txt  ade_scheduler_api.py  app.conf  app.py  app.wsgi  cli.py  dev-requirements.txt  diagnostics.py  docker-compose.yml  docker-services.yml  manager.py  mypy.ini  options-utilisateur.txt  package-lock.json  package.json  prod-requirements.txt  pyproject.toml  requirements.txt  run-tests.sh  (+3 more)
.github/: dependabot.yml
.github/workflows/: autoblack.yml  ci.yml  codeql.yml  languagetool.yml  pages.yml  pyflakes.yml  python-package.yml  rustlints.yml
backend/: Cargo.toml  README.md  Rocket.toml  __init__.py  ade_api.py  classrooms.py  cookies.py  courses.py  credentials.py  database.py  diesel.toml  events.py  mail.py  manager.py  mixins.py  models.py  oauth.py  professors.py  pyproject.toml  redis.py  resources.py  schedule.py  schedules.py  security.py  servers.py  track_usage.py  uclouvain_apis.py  utils.py
backend/.github/workflows/: CI.yml
backend/migrations/2023-07-04-201353_users/: down.sql  up.sql
backend/migrations/2023-08-09-193715_schedules/: down.sql  up.sql
backend/src/: bin.rs  error.rs  lib.rs  main.rs  schema.rs
backend/src/ade/: mod.rs
backend/src/api/: mod.rs
backend/src/api/ade/: mod.rs  xml.rs
backend/src/api/my/: json.rs  mod.rs
backend/src/core/: event.rs  mod.rs  schedule.rs
backend/src/json/: mod.rs
backend/src/models/: mod.rs  schedule.rs  user.rs
backend/src/my/: mod.rs
backend/src/redis/: mod.rs
backend/src/routes/: calendar.rs  mod.rs  oauth.rs  schedule.rs
backend/src/xml/: mod.rs
bot/: README.md  bot.py  requirements.txt
cli/: api_usage.py  cli.py  cli_api_usage.py  cli_client.py  cli_external_calendars.py  cli_mails.py  cli_plots.py  cli_redis.py  cli_roles.py  cli_schedules.py  cli_sql.py  cli_usage.py  cli_users.py  client.py  plots.py  redis.py  schedules.py  sql.py  usage.py  users.py
components/: AlertToast.vue  ScrollSpy.vue  SidebarMenu.vue  Spinner.vue
docker/: Dockerfile  README.md  entrypoint.sh
docs/: README.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/backend/: ade_api.rst  classrooms.rst  cookies.rst  courses.rst  credentials.rst  database.rst  events.rst  mail.rst  manager.rst  mixins.rst  modules.rst  professors.rst  resources.rst  schedules.rst  security.rst  servers.rst  track_usage.rst  uclouvain_apis.rst
docs/source/cli/: cli_api_usage.rst  cli_client.rst  cli_external_calendars.rst  cli_mails.rst  cli_plots.rst  cli_redis.rst  cli_roles.rst  cli_schedules.rst  cli_sql.rst  cli_usage.rst  cli_users.rst  modules.rst
docs/source/main/: ade_scheduler_api.rst  diagnostics.rst  modules.rst
docs/source/tutorials/: ade-api.rst  ade-scheduler.rst  contribute.rst  database.rst  docker.rst  email.rst  index.rst  launch.rst  redis-server.rst  setup.rst
docs/source/views/: account.rst  admin.rst  api.rst  calendar.rst  classroom.rst  help.rst  (+4 more)
frontend/: .eslintrc.js  README.md  env.d.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
migrations/: README.md  env.py
migrations/versions/: 1c9723cf49c9_add_uuid_to_schedule.py  1f13a87097d8_db_v1.py  243308ddc5e0_track_usage_rework.py  300410acb1c7_track_usage_rework.py  78218d17934c_api_usage.py  7e8b8d04baec_fix_sawarning.py  93c749eaa6b4_use_uclouvain_oauth.py  ae91c7ca9560_add_unsaved_to_user.py  c56f06d50437_add_last_schedule_column_in_user.py  e1300b949935_dev_v1.py  ed6e74cb1a7e_adding_external_events.py  edca2de88864_adding_description_to_external_events.py
python/: ade.py  background_job.py  classes.py  computation.py  cours.py  course.py  database.db  database.py  database_test.db  database_test.py  encrypt.py  event.py  events.py  library.py  professor.py  slot.py  static_data.py  test.py  test_classes.py  test_computation.py  test_db.py
python/saves/: 0.p
scripts/: bootstrap  console  server  setup
scripts/includes/: message.sh
static/css/: account.css  admin.css  base.css  base.scss  bootstrap.scss  calendar.css  classroom.css  contribute.css  help.css  login.css  whatisnew.css
static/favicon/: browserconfig.xml  site.webmanifest
static/js/: account.js  admin.js  base.js  calendar.js  classroom.js  contact.js  contribute.js  custom_course.js  help.js  register_user.js  signup.js  store.js  welcome.js  whatisnew.js
static/json/: geo_locations.json
templates/: account.html  admin.html  base.html  calendar.html  classroom.html  contact.html  contribute.html  custom_course.html  custom_macros.html  help.html  login.html  sign_in.html  signup.html  welcome.html  whatisnew.html
templates/errorhandler/: 403.html  404.html  500.html
templates/security/: change_password.html  forgot_password.html  login_user.html  register_user.html  reset_password.html  send_confirmation.html
tests/: __init__.py  app.py  conftest.py  db_test.py  test_ade_api.py  test_calendar.py  utils.py
tests/backend/: __init__.py  conftest.py  test_ade_api.py  test_servers.py
tests/templates/: base.html
tests/views/: __init__.py  conftest.py  test_account.py  test_api.py  test_calendar.py  test_classroom.py  test_contact.py  test_help.py  test_utils.py  test_whatisnew.py
translations/: README.md  babel.cfg
util/: assets.py
views/: account.py  admin.py  api.py  calendar.py  classroom.py  contact.py  contribute.py  custom_course.py  help.py  security.py  utils.py  whatisnew.py
webapp/: ade_scheduler.py  app.js  app.py  app_calendar.py  babel.cfg  calendar.py  package-lock.json  package.json  personnal_data.py
webapp/templates/: 404.html  base.html  calendar.html  continued.html  daygrid-views.html  get-events.php  help.html  index.html  map.html  preferences.html  tennis.html  test.html
webapp/views/: index.hbs
(+79 files in other folders)
