[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
target-version = ["py39"]

[tool.isort]
profile = "black"
py_version = 39

[tool.mypy]
python_version = "3.9"

[tool.poetry]
authors = ["Jérome Eertmans <jeertmans@icloud.com>", "Gilles Poncelet <gillesponcelet98@gmail.com>", "Louis Navarre <louisnavarre@hotmail.com>"]
description = ""
license = "MIT"
name = "ADE Scheduler"
packages = [
  {include = "backend"},
  {include = "cli"},
  {include = "views"}
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "1.7.4"
authlib = "0.15.5"
bcrypt = "3.2.0"
bleach = "4.1.0"
click = "8.0.3"
cryptography = "3.4.7"
flask = "2.0.2"
flask-babel = "2.0.0"
flask-compress = "1.10.1"
flask-jsglue = "0.3.1"
flask-login = "0.5.0"
flask-mail = "0.9.1"
flask-migrate = "3.1.0"
flask-session = "0.4.0"
flask-sqlalchemy = "2.5.1"
geopy = "2.2.0"
ics = "0.7"
jinja2 = "3.0.2"
jsmin = "3.0.1"
lxml = "4.6.5"
numpy = "1.22.1"
pandas = "1.4.0"
plotly = "5.5.0"
psycopg2-binary = "2.9.1"
pyopenssl = "21.0.0"
python = "^3.9"
python-dotenv = "0.19.2"
pytz = "2021.3"
redis = "3.5.3"
requests = "2.26.0"
sqlalchemy = "1.4.22"
tatsu = "5.6.1"
telegram = "0.0.1"
user-agents = "2.2.0"
werkzeug = "2.0.2"

[tool.poetry.group.bot.dependencies]
python-dotenv = "0.19.2"
python-telegram-bot = "13.10"

[tool.poetry.group.dev.dependencies]
black = "21.12b0"
mypy = "0.931"
pre-commit = "2.17.0"
pytest-flask = "1.2.0"

[tool.poetry.group.docs.dependencies]
furo = "^2022.9.29"
myst-parser = "^0.18.1"
sphinx = "4.4.0"
sphinx-click = "3.0.2"
sphinx-copybutton = "^0.5.1"
sphinxext-opengraph = "^0.7.5"
