[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
chrono = {version = "0.4.24", features = ["serde"]}
dotenv = "0.15.0"
log = "0.4.17"
quick-xml = {version = "0.28.2", features = ["serialize"]}
redis = "0.23.0"
reqwest = {version = "0.11.18", features = ["json"]}
rocket = "=0.5.0-rc.2"
rocket_okapi = {version = "=0.8.0-rc.2", features = ["swagger"]}
serde = {version = "1.0.163", features = ["derive"]}
thiserror = "1.0.40"

[lib]
name = "backend"
path = "src/lib.rs"

[package]
edition = "2021"
name = "backend"
version = "0.1.0"
